# Edgedevice_RPI4

./: .gitignore  CMakeLists.txt  Makefile  README.md  adaptive_hybrid_strategy_260319_afternoon  adaptive_hybrid_strategy_260319_afternoon_2  build_fix_plan_260319_morning  comprehensive_technical_report.md  comprehensive_technical_report.md.resolved  config.json  implementation_plan_260318  implementation_plan_260318_2  implementation_plan_hybrid_firedetection_260318  non_blocking_capture_plan.md  optimization_guide_v2026_260319_afternoon  pi_fire_fusion_pipeline_ultralytics.py  requestwrap_analysis_260320_v1  rpi_heartbeat.cpp  stm_bridge.service  system_architecture_260319  troubleshooting_report.md.resolved  walkthrough.md.resolved_2  walkthrough_260318  walkthrough_260318_Performancemonitor_solid  walkthrough_queue 터지는 문제.md
SubCameraApp_refactory_260309_stm_com/: walkthrough.md.resolved  walkthrough.md.resolved_2
SubCameraApp_refactory_260309_stm_com/SubCameraApp_refactory_260309/: CMakeLists.txt  README.md  compare_0213.cpp
SubCameraApp_refactory_260311/: .gitignore  260313_compare.cpp  260326_firedetect_hanwha_detectenhanced.py  CMakeLists.txt  Makefile_tester  README.md  README_integrated_profiling.md  comprehensive_technical_report.md  optimization_report_0311.md  walkthrough_queue 터지는 문제.md  walkthrough_tensor
SubCameraApp_refactory_260311/config/: AppConfig.h
SubCameraApp_refactory_260311/fire_detection_0317/: fire_detection_260317.py  fire_model.pth  hybrid_fire_pipeline.py  implementation_plan_260317_py2c++  metadata_check.py  newmodel_fire_detection_260318 .py  pi_fire_fusion_pipeline_tensor.py  pi_fire_fusion_pipeline_ultralytics.py  pt_weights.pth  task_260317_py2c++  video_confusion_combine.cpp  video_confusion_combine_260317.py  video_confusion_rtsp.cpp  video_confusion_rtsp.py  yolov8_fire_detection.py
SubCameraApp_refactory_260311/src/: README.md  main.cpp
SubCameraApp_refactory_260311/tester/: README.md  TesterApp.cpp  TesterModes.h
SubCameraApp_refactory_260311/testing_app/: README.md
SubCameraApp_refactory_260311/testing_app_python/: ai_flow_analysis.md  fall_detection_comparison.md  manual.md  requirements_pi.txt  revision_notes.md
SubCameraApp_refactory_260311/testing_app_python_v2/: main.py  manual.md  requirements.txt
SubCameraApp_refactory_260320_v3/SubCameraApp/: .gitignore  README.md
SubCameraApp_통합실험용/: walkthrough.md.resolved_2603061640
config/: AppConfig.h
src/: bridge.cpp  bridge.h  main.cpp  server_client.cpp  server_client.h  stm32_proto.cpp  stm32_proto.h  uart_port.cpp  uart_port.h
src/ai/: IAiDetector.h  PoseEstimator.cpp
testing_app_python/: README.md  ai_only_test copy.py  ai_only_test_done.py  camera_debug.py  main.py
tools/: mock_tcp_server.py
(+247 files in other folders)
